@@ -1,3 +1,7 @@
+2013-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* eww.el (eww-detect-charset): Detect charset from the <meta> tag.
+
 2013-06-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* shr.el (shr-tag-svg): Ignore SVG elements, because we don't know how
